--- a/lina.css
+++ b/lina.css
@@ -209,6 +209,11 @@ h2{ font-size: 2rem;}
 }
 
 /* ================= CONTACT ================= */
+.contact{
+ background: linear-gradient(to right, #111, #4fc3f7);
+  padding: 50px 20px;
+ text-align:center;
+}
 .contact a {
   color: #ff69b4;
   text-decoration: none;
@@ -241,3 +246,4 @@ h2{ font-size: 2rem;}
   h1{ font-size:2.5rem;}
   h2{ font-size:1.5rem;}
 }
+
